--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                     <i class="bi bi-database-down text-xl mr-3 text-gray-400 group-hover:text-blue-500 transition-colors"></i>
                     <span class="menu-text font-medium">Backup Database</span>
                 </a>
-                <p class="text-gray-400 dark:text-gray-500 px-2 mt-4 mb-1 text-xs font-semibold uppercase truncate">Admin Panel</p>
+                <p id="label-main-panel" class="text-gray-400 dark:text-gray-500 px-2 mt-4 mb-1 text-xs font-semibold uppercase truncate">Admin Panel</p>
 
                 <a href="#" onclick="loadContent('dashboard')" class="p-3 flex items-center text-gray-700 dark:text-white hover:bg-blue-50 hover:text-blue-600 dark:hover:bg-gray-700 rounded-lg transition-colors group">
                     <i class="bi bi-grid-1x2-fill text-xl mr-3 text-gray-400 group-hover:text-blue-500 transition-colors"></i>
